main block created: grid, items etc

--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -22,13 +22,27 @@
     > .nav-item {
       text-align: center;
 
-      border-left: 1px solid $font-color-dark;
-
       flex-grow: 1;
+
+      :not(.show) {
+        border-left: 1px solid $font-color-dark;
+      }
 
       &:last-child {
         border-right: 1px solid $font-color-dark;
       }
     }
+  }
+}
+
+.btn-outline-success {
+  color: $font-color-dark;
+  border-color: $font-color-dark;
+  border-radius: 0;
+
+  &:hover {
+    color: $font-color-light;
+    border-color: $font-color-dark;
+    background-color: $font-color-dark;
   }
 }
