--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,49 @@
   font-size: 1.2rem;
 }
 
-.page-header {
-  background-image: url(../img/patt.png);
+.btn-outline-success {
+  color: #2c71b6;
+  border-color: #2c71b6;
+  border-radius: 0;
+}
+
+.btn-outline-success:hover {
+  color: #ffffff;
+  border-color: #2c71b6;
+  background-color: #2c71b6;
 }
 
 .page-header__navbar {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+.page-header__navbar .dropdown.show {
+  border-bottom: 1px solid #ffffff;
+  background-color: #2c71b6;
+}
+
+.page-header__navbar .dropdown.show .dropdown-toggle {
+  color: #ffffff;
+}
+
+.page-header__navbar .dropdown-menu {
+  margin-top: 1px;
+  border: none;
+  border-radius: 0;
+  background-color: #2c71b6;
+}
+
+.page-header__navbar .dropdown-menu a {
+  color: #ffffff;
+}
+
+.page-header__navbar .dropdown-menu a:hover {
+  color: #2c71b6;
+}
+
 .page-header__carousel {
+  margin-right: 0;
+  margin-left: 0;
   border-bottom: 1px solid #ffffff;
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -31,23 +65,31 @@
       flex-wrap: nowrap;
 }
 
-.page-header__navbar-search input {
+.page-header__navbar-search .form-control {
   border: none;
+  border-radius: 0;
   background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   font-size: 1.2rem;
 }
 
 .page-header__navbar-search button {
-  padding: 5px;
+  margin: 5px;
+  padding: 0;
   color: #ffffff;
-  border: none;
-  border-radius: 0;
+  border-color: #2c71b6;
+  background-color: #2c71b6;
+}
+
+.page-header__navbar-search button:hover {
+  color: #2c71b6;
+  background-color: #ffffff;
 }
 
 .page-header__navbar-search i {
   display: block;
   padding: 10px;
-  background-color: #2c71b6;
 }
 
 .page-header__cart-btn {
@@ -61,12 +103,20 @@
   background-color: #ffffff;
 }
 
+.page-header__cart-btn:hover span {
+  color: #2c71b6;
+  background-color: #ffffff;
+}
+
 .page-header__cart-btn span {
   position: absolute;
   top: -12px;
   left: -12px;
   width: 24px;
   height: 24px;
+  -webkit-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  transition: background-color 0.5s;
   color: #ffffff;
   border-radius: 12px;
   background-color: #2c71b6;
@@ -76,14 +126,165 @@
   font-size: 1.5rem;
 }
 
-main.container-fluid {
-  min-height: 300px;
-  background-color: #dddddd;
+body {
+  background-image: url(../img/patt.png);
+  background-position: 50% 0;
 }
 
-footer.container-fluid {
-  min-height: 1300px;
-  background-color: #cccccc;
+.breadcrumb {
+  padding: 1rem 0 0 0;
+  opacity: 0.5;
+  background-color: transparent;
+  font-size: 14px;
+}
+
+.breadcrumb a {
+  color: #ffffff;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: ">";
+  color: #ffffff;
+}
+
+.breadcrumb-item.active {
+  color: #ffffff;
+}
+
+.page-title__header {
+  color: #ffffff;
+  font-size: 2.85rem;
+}
+
+.page-title__filter {
+  width: 100%;
+  margin-top: 6px;
+  padding: 3px 10px 5px;
+  color: #ffffff;
+  border-color: #ffffff;
+  background-color: #2c71b6;
+  font-size: 1.25rem;
+}
+
+.page-content {
+  margin-top: 30px;
+}
+
+.item-wrapper {
+  position: relative;
+  margin-bottom: 30px;
+  border: 1px solid #ffffff;
+}
+
+.item-wrapper .container-fluid {
+  background-color: rgba(44, 113, 182, 0.5);
+}
+
+.item-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  height: 180px;
+  background-color: rgba(255, 255, 255, 0.75);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.item-title {
+  padding-top: 0.75rem;
+  color: #ffffff;
+  font-size: 1.75rem;
+}
+
+.item-description {
+  color: #ffffff;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+}
+
+.item-characteristics {
+  margin-top: 15px;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.item-characteristics span {
+  display: block;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  color: #ffffff;
+}
+
+.item-buttons {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.item-buttons button {
+  display: block;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+}
+
+.item-buttons button:last-child {
+  margin-top: 5px !important;
+}
+
+.item-price {
+  text-align: center;
+  color: #ffffff;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.item-actions {
+  padding: 15px;
+}
+
+.item-actions button {
+  display: block;
+  width: 100%;
+  margin-bottom: 30px !important;
+  padding: 8px 5px 10px;
+  text-transform: uppercase;
+  color: #ffffff;
+  border-color: #ffffff;
+  border-radius: 0;
+  font-size: 1.15rem;
+  font-weight: bold;
+}
+
+.item-actions button:last-child {
+  margin-bottom: 15px !important;
+}
+
+.item-actions button:hover {
+  color: #2c71b6;
+  border-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.item-actions button i {
+  margin-left: 5px;
+  font-size: 1rem;
+}
+
+.item-actions__cart {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.page-pagination__more {
+  margin-bottom: 30px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 2rem;
 }
 
 @media (min-width: 992px) {
@@ -95,18 +296,26 @@ footer.container-fluid {
 
   .navbar-nav > .nav-item {
     text-align: center;
-    border-left: 1px solid #2c71b6;
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
+  }
+
+  .navbar-nav > .nav-item :not(.show) {
+    border-left: 1px solid #2c71b6;
   }
 
   .navbar-nav > .nav-item:last-child {
     border-right: 1px solid #2c71b6;
   }
 
-  .page-header__navbar-search input {
+  .page-header__navbar-search .form-control {
     width: 10rem !important;
+  }
+
+  .sidebar-filter {
+    border-right: 1px solid #ffffff;
+    background-color: rgba(255, 255, 255, 0.4);
   }
 }
 
@@ -118,7 +327,7 @@ footer.container-fluid {
     width: calc(100% - 100px);
   }
 
-  .page-header__navbar-search input {
+  .page-header__navbar-search .form-control {
     -webkit-box-flex: 2;
         -ms-flex-positive: 2;
             flex-grow: 2;
@@ -126,6 +335,10 @@ footer.container-fluid {
 
   .page-header__cart-btn {
     margin-top: -12px !important;
+  }
+
+  .sidebar-filter {
+    border-top: 1px solid #ffffff;
   }
 }
 /*# sourceMappingURL=style.css.map */
