footer created and header cart minor improvements

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -123,6 +123,7 @@
     color: $font-color-light;
     border-radius: 12px;
     background-color: $font-color-dark;
+    box-shadow: 0 0 5px rgba(#000000, 0.75);
   }
 }
 
