--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,8 @@
   color: #ffffff;
   border-radius: 12px;
   background-color: #2c71b6;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
 }
 
 .fa-shopping-cart {
@@ -285,6 +287,18 @@ body {
   text-align: center;
   color: #ffffff;
   font-size: 2rem;
+}
+
+.page-footer {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.page-footer__copyright {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  color: #2c71b6;
+  font-size: 1.25rem;
 }
 
 @media (min-width: 992px) {
