--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -147,8 +147,15 @@
       border-color: $font-color-light;
       border-radius: 0;
 
-      font-size: 1.15rem;
       font-weight: bold;
+
+      @media (min-width: 1200px) {
+        font-size: 1.15rem;
+      }
+
+      @media (max-width: 1199px) {
+        font-size: 0.9rem;
+      }
 
       &:last-child {
         margin-bottom: 15px !important;
@@ -179,8 +186,10 @@
 
     text-align: center;
 
-    color: $font-color-light;
-
     font-size: 2rem;
+
+    a {
+      color: $font-color-light;
+    }
   }
 }
