--- a/css/style.css
+++ b/css/style.css
@@ -27,30 +27,6 @@
   background-color: rgba(255, 255, 255, 0.8);
 }
 
-.page-header__navbar .dropdown.show {
-  border-bottom: 1px solid #ffffff;
-  background-color: #2c71b6;
-}
-
-.page-header__navbar .dropdown.show .dropdown-toggle {
-  color: #ffffff;
-}
-
-.page-header__navbar .dropdown-menu {
-  margin-top: 1px;
-  border: none;
-  border-radius: 0;
-  background-color: #2c71b6;
-}
-
-.page-header__navbar .dropdown-menu a {
-  color: #ffffff;
-}
-
-.page-header__navbar .dropdown-menu a:hover {
-  color: #2c71b6;
-}
-
 .page-header__carousel {
   margin-right: 0;
   margin-left: 0;
@@ -259,7 +235,6 @@ body {
   color: #ffffff;
   border-color: #ffffff;
   border-radius: 0;
-  font-size: 1.15rem;
   font-weight: bold;
 }
 
@@ -285,8 +260,64 @@ body {
 .page-pagination__more {
   margin-bottom: 30px;
   text-align: center;
-  color: #ffffff;
   font-size: 2rem;
+}
+
+.page-pagination__more a {
+  color: #ffffff;
+}
+
+.sidebar-filter {
+  padding: 15px 30px 30px;
+  color: #ffffff;
+}
+
+.sidebar-filter legend {
+  font-weight: bold;
+}
+
+.sidebar-filter .form-check {
+  margin: 10px 0;
+}
+
+.sidebar-filter .form-check-label {
+  margin-left: 0.5rem;
+  font-size: 1.25rem;
+}
+
+.sidebar-filter .form-check-input {
+  width: 0;
+  height: 0;
+}
+
+.sidebar-filter .form-check-input:focus {
+  outline: none;
+}
+
+.sidebar-filter .form-check-input:checked::before {
+  background-color: #ffffff;
+}
+
+.sidebar-filter .form-check-input::before {
+  display: block;
+  width: 0.8rem;
+  height: 0.8rem;
+  margin-top: 0.35rem;
+  content: "";
+  border: 1px solid #ffffff;
+}
+
+.sidebar-filter__more {
+  display: block;
+  margin-bottom: 30px;
+  color: #ffffff;
+  font-size: 1.25rem;
+}
+
+.sidebar-filter__submit {
+  border: 1px solid #ffffff;
+  border-radius: 0;
+  background-color: #2c71b6;
 }
 
 .page-footer {
@@ -323,13 +354,49 @@ body {
     border-right: 1px solid #2c71b6;
   }
 
+  .page-header__navbar .dropdown.show {
+    border-bottom: 1px solid #ffffff;
+    background-color: #2c71b6;
+  }
+
+  .page-header__navbar .dropdown.show .dropdown-toggle {
+    color: #ffffff;
+  }
+
+  .page-header__navbar .dropdown-menu {
+    margin-top: 1px;
+    border: none;
+    border-radius: 0;
+    background-color: #2c71b6;
+  }
+
+  .page-header__navbar .dropdown-menu a {
+    color: #ffffff;
+  }
+
+  .page-header__navbar .dropdown-menu a:hover {
+    color: #2c71b6;
+  }
+
   .page-header__navbar-search .form-control {
     width: 10rem !important;
   }
 
   .sidebar-filter {
     border-right: 1px solid #ffffff;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.25);
+  }
+}
+
+@media (min-width: 1200px) {
+  .item-actions button {
+    font-size: 1.15rem;
+  }
+}
+
+@media (max-width: 1199px) {
+  .item-actions button {
+    font-size: 0.9rem;
   }
 }
 
