--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
 }
 
+.page-header__cart-counter {
+  display: none;
+}
+
 .fa-shopping-cart {
   font-size: 1.5rem;
 }
