--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -89,43 +89,49 @@
   }
 }
 
-.page-header__cart-btn {
-  position: relative;
+.page-header {
+  &__cart-btn {
+    position: relative;
 
-  width: 50px;
-  height: 50px;
-  margin-left: 30px;
+    width: 50px;
+    height: 50px;
+    margin-left: 30px;
 
-  color: $font-color-dark;
-  border: none;
-  border-radius: 0;
-  background-color: $font-color-light;
+    color: $font-color-dark;
+    border: none;
+    border-radius: 0;
+    background-color: $font-color-light;
 
-  @media (max-width: 991px) {
-    margin-top: -12px !important;
-  }
+    @media (max-width: 991px) {
+      margin-top: -12px !important;
+    }
 
-  &:hover {
+    &:hover {
+      span {
+        color: $font-color-dark;
+        background-color: $font-color-light;
+      }
+    }
+
     span {
-      color: $font-color-dark;
-      background-color: $font-color-light;
+      position: absolute;
+      top: -12px;
+      left: -12px;
+
+      width: 24px;
+      height: 24px;
+
+      transition: background-color 0.5s;
+
+      color: $font-color-light;
+      border-radius: 12px;
+      background-color: $font-color-dark;
+      box-shadow: 0 0 5px rgba(#000000, 0.75);
     }
   }
 
-  span {
-    position: absolute;
-    top: -12px;
-    left: -12px;
-
-    width: 24px;
-    height: 24px;
-
-    transition: background-color 0.5s;
-
-    color: $font-color-light;
-    border-radius: 12px;
-    background-color: $font-color-dark;
-    box-shadow: 0 0 5px rgba(#000000, 0.75);
+  &__cart-counter {
+    display: none;
   }
 }
 
