--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 
 .page-footer {
-  background-color: rgba($font-color-light, 0.8);
+  background-color: rgba($color-light, 0.8);
 
   &__copyright {
     padding-top: 30px;
@@ -8,7 +8,7 @@
 
     text-align: center;
 
-    color: $font-color-dark;
+    color: $color-dark;
 
     font-size: 1.25rem;
   }
