--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,7 @@
+@import "libs/bootstrap/scss/bootstrap";
 
 @import "variables";
-@import "bootstrap";
+@import "bootstrap-theming";
 @import "header";
 @import "common";
 @import "main";
